--- a/views/include/footer.ejs
+++ b/views/include/footer.ejs
@@ -1,3 +1,25 @@
+
+
+
+
 </div>
+<footer >
+  <p>&copy; 2025 Blogging App | All Rights Reserved</p>
+</footer>
 </body>
 </html>
+
+<style>
+footer{
+  margin: 0;
+  font-family: initial;
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+</style>
