--- a/views/myBlogPage.ejs
+++ b/views/myBlogPage.ejs
@@ -1,3 +1,6 @@
+
+
+
 <%- include('include/header2') %>
 
 <h1>My Blogs</h1>
@@ -7,6 +10,9 @@
     <div class="note-card">
       <h3><%= note.title %></h3>
       <p><%= note.content %></p>
+      <% if (note.imageUrl) { %>
+  <img src="<%= note.imageUrl %>" alt="Note Image" style="max-width: 100%; height: auto;">
+<% } %>
       <div class="note-actions">
         <form action="/notes/<%= note._id %>?_method=DELETE" method="POST" style="display:inline;">
           <button type="submit" class="btn btn-danger btn-sm">Delete</button>
@@ -69,49 +75,7 @@ window.onload = function () {
 };
 </script>
 
-<style>
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: none;
-  justify-content: center;
-  align-items: center;
-}
 
-.modal-content {
-  background-color: white;
-  padding: 20px;
-  border-radius: 5px;
-  width: 400px;
-  max-width: 90%;
-  position: relative;
-}
-
-#closeModalBtn {
-  position: absolute;
-  top: 24%;
-  right: 32%;
-  background-color: transparent;
-  border: none;
-  font-size: 20px;
-  cursor: pointer;
-}
-
-#editForm {
-  display: grid;
-  gap: 4px;
-}
-
-.modal-footer {
-  margin-top: 20px;
-  display: flex;
-  justify-content: flex-end;
-}
-</style>
 
 <div id="editModal" class="modal">
   <div class="modal-content">
