--- a/views/myBlogPage.ejs
+++ b/views/myBlogPage.ejs
@@ -1,7 +1,29 @@
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bloging App</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+</head>
+<body>
+  <nav class="navbar">
+    <!-- Left Side -->
+    <div class="nav-left">
+        <a href="/notes">Blog <i class="fa-solid fa-blog"></i></a>
+        <a href="/myblog">My Blog <i class="fa-solid fa-blog"></i></a>
+    </div>
+  
+    <!-- Right Side -->
+    <div class="nav-right">
+        <a href="/logout">Logout <i class="fa-solid fa-right-from-bracket"></i></a>
+     
+    </div>
+  </nav>
 
-<%- include('include/header2') %>
 
 <h1>My Blogs</h1>
 
